2005-11-22  Cesar Lopez Nataren  <cnataren@novell.com>

	* Statement.cs (Return.Resolve): Added field exp_returns_void
	which allow us to return a method call as the return expression
	value even when the method call returns void; we emit null in such
	a case.

	* ast.cs (Function): switch from 'protected' to 'internal'
	property HandleReturnType.

2005-11-21  Cesar Lopez Nataren  <cnataren@novell.com>

	* Statement.cs (class Switch): Preserve the value of
	EmitContext.LoopEnd as can be overriden in nested blocks, for
	example in a switch statement inside a for-loop.

2005-10-28  Raja R Harinath  <rharinath@novell.com>

	* Import.cs (Resolve): Update to changes in GMCS.
	* SemanticAnalizer.cs (ComputeNamespace): Likewise.

2005-10-23  Florian Gross  <flgr@ccan.de>

	* LateBinding.cs: Changed to accept object instead of ScriptObject in a lot of places
	
2005-10-23  Raja R Harinath  <harinath@gmail.com>

	* Import.cs (Resolve): Update to changes in MCS code.

2005-10-11  Cesar Lopez Nataren  <cnataren@novell.com>

	* CodeGenerator.cs (CodeGenerator): EmitRelationalComp handle 'in'
	operator case.

	* Add support for multiple files compilation. This involved addig
	an extra pass into the AST for ensuring the resolve process, this
	pass is named PopulateContext. The AST nodes that implement
	ICanModifyContext call PopulateContext.

	* IdentificationTable.cs: Added class Environment, which is a
	symbol table which takes into account namespace info, this is for
	package statement future implementation.

2005-09-30  Cesar Lopez Nataren  <cnataren@novell.com>

	* expression.cs (Expression::Resolve): check if we have an
	assigment in a chain of expressions and stms, it fixes
	#75801, and give us 660 more successful tests.

2005-09-13  Cesar Lopez Nataren  <cnataren@novell.com>

	* SemanticAnalyser.cs: Add field assemblies. Run now receives the
	assembly's array, add method ComputeNamespaces,
	* Parser.cs: Add support for the 'import' statement. Add field